# coursera-hub

./: README.md  pyproject.toml  requirements.md
src/: constants.py  coursera_helper_wrapper.py  main.py  test.py
src/config/: constants.py
src/coursera_dl/: api.py  commandline.py  cookies.py  coursera_dl.py  define.py  downloaders.py  extractors.py  filtering.py  playlist.py  utils.py  workflow.py
src/coursera_helper/: commandline.py  coursera_dl.py  downloaders.py  extractors.py  workflow.py
src/utils/: __init__.py  prefs.py
src/views/: home.py
