[project]
name = "coursera-hub"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "attrs>=26.1.0",
    "beautifulsoup4>=4.14.3",
    "browser-cookie3>=0.20.1",
    "configargparse>=1.7.5",
    "flet>=0.82.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.2",
    "flet-desktop>=0.82.2",
    "flet-web>=0.82.2",
]

[tool.flet]
org = "com.mycompany"
product = "coursera-hub"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
