[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coursera-hub"
version = "1.0.0"
description = "A cross-platform desktop client for downloading Coursera courses"
authors = [
    { name = "" },
]
dependencies = [
    "flet>=0.82.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "browser-cookie3>=0.20.1",
    "playwright>=1.48.0",
    "attrs>=25.3.0",
    "configargparse>=1.7.5",
]
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]

[tool.flet.app]
path = "src"